--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <img id="nathan" src="Screenshot from 2023-03-02 17-23-47.png" alt="Click Nathan">
     </div>
     <h1 id="z">Level 1: Abnormal Nathan</h1>
+    <p id="freepik"></p>
     <h1 id="y"></h1>
     <script src="nathan.js"></script>
 </body>
