--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <h1 id="counter"></h1>
-    <div class="container">
-    <img id="nathan" src="Screenshot from 2023-03-02 17-23-47.png" alt="Click Nathan">
+    <div class="container"> 
+    <img id="nathan" src="Nate0.png" alt="Click Nathan">
     </div>
-    <h1 id="z">Level 1: Abnormal Nathan</h1>
+    <h1 id="z">Level 1: Devious Nathan</h1>
     <h1 id="y"></h1>
     <script src="nathan.js"></script>
 </body>
