--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <h1 id="counter"></h1>
     <div class="container"> 
-    <img id="nathan" src="Nate0.png" alt="Click Nathan">
+    <img id="nathan" src="Nate.png" alt="Click Nathan">
     </div>
-    <h1 id="z">Level 1: Devious Nathan</h1>
+    <h1 id="z">Level 1: Goofy Nathan</h1>
     <h1 id="y"></h1>
     <script src="nathan.js"></script>
 </body>
